updated some links and fixed a change to footer horizontal alignment

--- a/css/footer.css
+++ b/css/footer.css
@@ -18,7 +18,7 @@ line-height: 2em;
 margin:0;
 padding: 0;
 list-style: none;
-float: center;
+float: left;
 position: relative;
 --background:#efefef;
 }
